--- a/rohan-matharu-portfolio/index.html
+++ b/rohan-matharu-portfolio/index.html
@@ -21,7 +21,7 @@
     <header class="header_area">
         <div class="main-menu">
             <nav class="navbar navbar-expand-lg navbar-light">
-                <a class="navbar-brand" href="#"><img src="./img/logo.png" alt="logo"></a>
+                <a class="navbar-brand" href="#"><img src="./img/logo-.png" alt="logo"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -98,7 +98,7 @@
                         </h2>
                         <div class="paragraph py-4 w-75">
                             <p class="para">
-                                Welcome to my website! My name is Rohan Matharu. I am an in training software developer and a student at Northern Alberta Institute of Technology. I learned coding as a second language when I was 6 years old by watching my dad code in the early years of computers in the year 2000. You can find my whole story on my <a href="https://www.linkedin.com/in/rohan-matharu-2b7b4a225" target="_blank">linkedin</a>.
+                                Welcome to my website! My name is Rohan Matharu. I am an in training software developer and a student at Northern Alberta Institute of Technology. I learned coding as a second language when I was 6 years old by watching my dad code in the early years of computers in the year 2000. You can find my whole story on my <a href="https://www.linkedin.com/in/rohanmatharu" target="_blank">linkedin</a>.
                             </p>
                             <p class="para">
                                 Outside of coding, I am an avid gamer who has a bad habit of never finishing games; A huge Manchester United fan and a wide variety of interests that is probably too wide to list without taking up a whole paragraph. But thanks to me having a wide range of interests, it is extremely easy for people to connect with me. So feel free to <a href="#contact-link">contact me</a>!
@@ -248,9 +248,9 @@
                 </div>
                 <div class="social text-center">
                     <h5 class="text-uppercase">Contact</h5>
-                    <a href="https://www.facebook.com/crazyturtles/" target="_blank"><i class="fab fa-facebook"></i></a>
-                    <a href="https://www.instagram.com/rohanmatharu/?hl=en" target="_blank"><i class="fab fa-instagram"></i></a>
-                    <a href="https://www.linkedin.com/in/rohan-matharu-2b7b4a225/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                    <!-- <a href="https://www.facebook.com/crazyturtles/" target="_blank"><i class="fab fa-facebook"></i></a>
+                    <a href="https://www.instagram.com/rohanmatharu/?hl=en" target="_blank"><i class="fab fa-instagram"></i></a> -->
+                    <a href="https://www.linkedin.com/in/rohanmatharu/" target="_blank"><i class="fab fa-linkedin"></i></a>
                     <a href="https://twitter.com/crazyturt1es" target="_blank"><i class="fab fa-twitter"></i></a>
                 </div>
             </div>
